/*
 * Copyright (c) 2014 OpenSilk Productions LLC
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

apply plugin: 'com.android.library'
apply plugin: 'org.robolectric'

// Versioning
def versionMajor = 0
def versionMinor = 2 //Mirror api version
def versionPatch = 1

assert(versionMinor < 100) // Double digits
assert(versionPatch < 1000)

android {
    compileSdkVersion rootProject.ext.compileSdkVersion
    buildToolsVersion rootProject.ext.buildToolsVersion

    defaultConfig {
        minSdkVersion 15
        targetSdkVersion rootProject.ext.targetSdkVersion
        versionCode versionMajor * 1000000 + versionMinor * 10000 + versionPatch
        versionName String.format("%d.%d.%d-SNAPSHOT", versionMajor, versionMinor, versionPatch)
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_7
        targetCompatibility JavaVersion.VERSION_1_7
    }
}

robolectric {
    include '**/*Test.class'
    //jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
    afterTest {
        descriptor, result -> println "Executing test for ${descriptor.name} with result: ${result.resultType}"
    }
}

// for uploadArchives
group "org.opensilk.music.plugin"
version android.defaultConfig.versionName
apply from: '../../maven_local.gradle'

dependencies {
    compile 'io.reactivex:rxandroid:0.23.0'
    // for library
    compile project(':api')

    testCompile('junit:junit:4.12')
    testCompile('org.robolectric:robolectric:2.4') {
        exclude module: 'commons-logging'
        exclude module: 'httpclient'
    }
    testCompile('com.squareup:fest-android:1.0.0')
    testCompile('org.mockito:mockito-core:1.10.0')
}
